# blackjack_rl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: blackjack_env.cpp  blackjack_env.hpp  hand.cpp  hand.hpp  main.cpp  q_agent.cpp  q_agent.hpp
tests/: test_blackjack_env.cpp  test_hand.cpp  test_q_agent.cpp
